[gd_scene load_steps=16 format=3 uid="uid://bvnj4ie205euj"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_ga0qp"]
[ext_resource type="PackedScene" uid="uid://kufy4l8qlp63" path="res://scenes/room_manager.tscn" id="2_tpo2t"]
[ext_resource type="PackedScene" uid="uid://cavy32fvbqm8w" path="res://scenes/time_manager.tscn" id="3_0l8fs"]
[ext_resource type="PackedScene" uid="uid://naua1f5cbkae" path="res://scenes/ui_manager.tscn" id="4_umkd5"]
[ext_resource type="PackedScene" uid="uid://dam4nevijq3sp" path="res://scenes/text_manager.tscn" id="5_u72dr"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="6_t7s7w"]
[ext_resource type="Texture2D" uid="uid://d0hrods06sh46" path="res://imgs/sprites/tasks/janitor/watering_can_icon.png" id="6_w7j0i"]
[ext_resource type="PackedScene" uid="uid://pmd056tqd6oc" path="res://scenes/audio_manager.tscn" id="7_8fxys"]
[ext_resource type="Texture2D" uid="uid://i7k2nploygar" path="res://imgs/sprites/tasks/logistics/cereal-bars_icon.png" id="7_j8bgl"]
[ext_resource type="Texture2D" uid="uid://bamxkcl4hu68r" path="res://imgs/sprites/tasks/logistics/coffee-cup_icon.png" id="8_h0j5k"]
[ext_resource type="Texture2D" uid="uid://jc08xtnowu4y" path="res://imgs/sprites/tasks/logistics/uranium_icon.png" id="9_r7uwo"]
[ext_resource type="Texture2D" uid="uid://vdvb1m2oy304" path="res://imgs/sprites/tasks/logistics/hazmat-suit_icon.png" id="10_dnq6y"]
[ext_resource type="Texture2D" uid="uid://c055500l7atw1" path="res://imgs/sprites/tasks/logistics/atombomb-kit_icon.png" id="11_h5i63"]
[ext_resource type="Texture2D" uid="uid://bgsjcvwkry5ea" path="res://imgs/sprites/tasks/logistics/plutonium_icon.png" id="12_3fpuw"]
[ext_resource type="PackedScene" uid="uid://cq8gsn8b52mwm" path="res://scenes/pause_manager.tscn" id="15_yndxq"]

[node name="GameManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga0qp")

[node name="RoomManager" parent="." instance=ExtResource("2_tpo2t")]
process_mode = 1
layout_mode = 1

[node name="TimeManager" parent="." instance=ExtResource("3_0l8fs")]
process_mode = 1
layout_mode = 1

[node name="TextManager" parent="." instance=ExtResource("5_u72dr")]
process_mode = 1
layout_mode = 1

[node name="Inventory" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_t7s7w")
watering_can_tex = ExtResource("6_w7j0i")
cereal_bar_tex = ExtResource("7_j8bgl")
coffee_cup_tex = ExtResource("8_h0j5k")
uranium_tex = ExtResource("9_r7uwo")
hazmat_suit_tex = ExtResource("10_dnq6y")
bomb_kit_tex = ExtResource("11_h5i63")
plutonium_tex = ExtResource("12_3fpuw")

[node name="Slot" type="TextureRect" parent="Inventory"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 44.0
offset_top = 348.0
offset_right = 141.0
offset_bottom = 443.0
mouse_filter = 2

[node name="SlotBG" type="ColorRect" parent="Inventory/Slot"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.662745)

[node name="AudioManager" parent="." instance=ExtResource("7_8fxys")]
layout_mode = 1

[node name="UIManager" parent="." instance=ExtResource("4_umkd5")]
process_mode = 3
layout_mode = 1

[node name="Pause_Manager" parent="." instance=ExtResource("15_yndxq")]
visible = false
layout_mode = 1
